Implement search module

--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,17 @@
 }
 
 
+/* SEARCH */
+#search-title {
+    font-size: 40px;
+  }
+  
+  #search-result,
+  .back-link {
+    color: #F5C518;
+  }
+
+
 /* FOOTER */
 #footer
 {
